--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "Test",
+  "name": "Filmoteka",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://AnatoliiSkuba.github.io/Test",
+  "homepage": "https://AnatoliiSkuba.github.io/Filmoteka",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Test/"
+    "build": "parcel build src/*.html --public-url /Filmoteka/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AnatoliiSkuba/Test.git"
+    "url": "git+https://github.com/AnatoliiSkuba/Filmoteka.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AnatoliiSkuba/Test/issues"
+    "url": "https://github.com/AnatoliiSkuba/Filmoteka/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
